feat(loan-service): add loan domain models, use cases & SQS support
- Introduced new domain models for credit analysis, loan events, and projections
- Added multiple new use cases: CreateLoan, UpdateLoan, LoanDecisionProcessor,
  SendLoanApprovedEvent, SendNotification
- Replaced LoanUseCase with more granular use cases, updated corresponding tests
- Enhanced Loan, LoanData, and related entities with new fields and behaviors
- Added exception handling (LoanNotFoundException) and validation utilities
- Integrated SQS sender module with configuration, sender, and listener classes
- Improved REST API: new request/response DTOs, mappers, filters, and utils
- Extended repository adapters for loan, loan status, and loan type
- Added Micrometer metrics helper module for AWS monitoring
- Updated configuration files, Gradle scripts, and Dockerfile